Fixed major issues with overlapping divs

--- a/css/extra-styling.css
+++ b/css/extra-styling.css
@@ -26,16 +26,19 @@ body#dashboard{
 
 .row#wrapper{
     width:100%;
-    height:100%;
+    height:auto;
     background-color:rgb(246,122,70);
 }
 #toDoListContainer{
     background-color:rgb(246,122,70);
-    height:100%;
+    height:auto;
+    z-index:3;
 }
 #activityFeedContainer{
     background-color:#eee;
-    height:100%;
+    height:auto;
+    min-height:100%;
+    z-index:2;
 }
 #profileHeader{
     background-color:rgb(128,128,128);
@@ -51,9 +54,15 @@ body#dashboard{
 #bottomnavbar{
     float: left;
     background-color: #162127;
-    position: fixed;
     bottom: 0;
     height:100px;
+    z-index:3;
+    position:relative;
+}
+
+.navbar-fixed-bottom{
+    height:100px;
+    position:relative;
 }
 .media{
     margin:0 auto;
@@ -63,12 +72,11 @@ body#dashboard{
 }
 .sidefiller{
     height:100%;
-    width:10.15%;
+    width:65%;
+    z-index:1;
     float:left;
+    position:absolute;
     background-color:#eee;
-}
-.navbar-fixed-bottom{
-    height:100px;
 }
 
 .navbar-header { background-color: #162127;}
@@ -142,7 +150,7 @@ textarea.form-control{
 }
 #wrapper{
     margin:0 auto;
-    height:100%;
+    height:auto;
 }
 h1,h2,h3,h4,h5,h6{
     font-family: 'CreteRound-Regular';
